k8s/specs/kchatui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: kchat-deployment
 labels:
  app: kchat
spec:
 replicas: 1
 selector:
  matchLabels:
   app: kchat
 template:
  metadata:
   labels:
    app: kchat
  spec:
   containers:
   - name: kchatui
     image: kchatui:0.0.2
     ports:
      - containerPort: 80
