k8s/specs/kchatui-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kchat-service
spec:
  type: NodePort
  selector:
    app: kchat
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30008
