k8s/specs/kchatui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kchat-service
spec:
  type: ClusterIP
  selector:
    app: kchat
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
